--- a/data/raw/gis/climate/yaml_refs/paper_2.yaml
+++ b/data/raw/gis/climate/yaml_refs/paper_2.yaml
@@ -101,7 +101,7 @@
   "unique_context_marker": "[21]"
   "block_ids":
   - 6
-- "title": "Videomae: Masked autoencoders are data-efficient learners for self-supervised video pre-training"
+- "title": "VideoMAE: Masked autoencoders are data-efficient learners for self-supervised video pre-training"
   "unique_context_marker": "[22]"
   "block_ids":
   - 7
@@ -141,7 +141,7 @@
   "unique_context_marker": "[31]"
   "block_ids":
   - 7
-- "title": "Automatic differentiation in pytorch"
+- "title": "Automatic differentiation in PyTorch"
   "unique_context_marker": "[32]"
   "block_ids":
   - 8
@@ -153,7 +153,7 @@
   "unique_context_marker": "[34]"
   "block_ids":
   - 8
-- "title": "Fractalnet: Ultra-deep neural networks without residuals"
+- "title": "FractalNet: Ultra-deep neural networks without residuals"
   "unique_context_marker": "[35]"
   "block_ids":
   - 8
@@ -177,7 +177,7 @@
   "unique_context_marker": "[40]"
   "block_ids":
   - 9
-- "title": "Dropout as a bayesian approximation: Representing model uncertainty in deep learning"
+- "title": "Dropout as a Bayesian approximation: Representing model uncertainty in deep learning"
   "unique_context_marker": "[41]"
   "block_ids":
   - 9
@@ -185,7 +185,7 @@
   "unique_context_marker": "[42]"
   "block_ids":
   - 10
-- "title": "Probabilistic wind speed forecasting using ensembles and bayesian model averaging"
+- "title": "Probabilistic wind speed forecasting using ensembles and Bayesian model averaging"
   "unique_context_marker": "[43]"
   "block_ids":
   - 10
@@ -193,7 +193,7 @@
   "unique_context_marker": "[44]"
   "block_ids":
   - 10
-- "title": "Why should ensemble spread match the rmse of the ensemble mean?"
+- "title": "Why should ensemble spread match the RMSE of the ensemble mean?"
   "unique_context_marker": "[45]"
   "block_ids":
   - 10
