--- a/data/raw/gis/climate/yaml_refs/paper_8.yaml
+++ b/data/raw/gis/climate/yaml_refs/paper_8.yaml
@@ -18,7 +18,7 @@
   - 5
   - 6
   - 9
-  - 14
+  - 15
 - "title": "Internal variability plays a dominant role in global climate projections of temperature and precipitation extremes"
   "unique_context_marker": "[5]"
   "block_ids":
@@ -59,7 +59,7 @@
   "unique_context_marker": "[14]"
   "block_ids":
   - 1
-- "title": "RainBench: Enabling data-driven precipitation forecasting on a global scale"
+- "title": "Rainbench: Enabling data-driven precipitation forecasting on a global scale"
   "unique_context_marker": "[15]"
   "block_ids":
   - 2
@@ -85,7 +85,7 @@
   "unique_context_marker": "[20]"
   "block_ids":
   - 6
-- "title": "WeatherBench Probability: A benchmark dataset for probabilistic medium-range weather forecasting along with deep learning baseline models"
+- "title": "Weatherbench probability: A benchmark dataset for probabilistic medium-range weather forecasting along with deep learning baseline models"
   "unique_context_marker": "[21]"
   "block_ids":
   - 2
@@ -95,7 +95,7 @@
   "unique_context_marker": "[22]"
   "block_ids":
   - 1
-- "title": "Towards multi-spatiotemporal-scale generalized PDE modeling"
+- "title": "Towards multi-spatiotemporal-scale generalized pde modeling"
   "unique_context_marker": "[23]"
   "block_ids": []
 - "title": "Scikit-downscale: an open source python package for scalable climate downscaling"
@@ -154,12 +154,12 @@
   "unique_context_marker": "[37]"
   "block_ids":
   - 1
-- "title": "GraphCast: Learning skillful medium-range global weather forecasting"
+- "title": "Graphcast: Learning skillful medium-range global weather forecasting"
   "unique_context_marker": "[38]"
   "block_ids":
   - 5
   - 9
-  - 14
+  - 15
 - "title": "An evaluation of ERA5 precipitation for climate monitoring"
   "unique_context_marker": "[39]"
   "block_ids":
@@ -221,19 +221,19 @@
   - 6
   - 9
   - 12
-  - 14
-- "title": "PyTorch: An imperative style, high-performance deep learning library"
+  - 15
+- "title": "Pytorch: An imperative style, high-performance deep learning library"
   "unique_context_marker": "[53]"
   "block_ids": []
-- "title": "FourCastNet: A global data-driven high-resolution weather model using adaptive Fourier neural operators"
+- "title": "Fourcastnet: A global data-driven high-resolution weather model using adaptive fourier neural operators"
   "unique_context_marker": "[54]"
   "block_ids":
   - 1
   - 5
   - 9
   - 12
-  - 14
-- "title": "CCDownscaling: A python package for multivariable statistical climate model downscaling"
+  - 15
+- "title": "Ccdownscaling: A python package for multivariable statistical climate model downscaling"
   "unique_context_marker": "[55]"
   "block_ids":
   - 2
@@ -241,11 +241,11 @@
   "unique_context_marker": "[56]"
   "block_ids":
   - 2
-- "title": "PRISM"
+- "title": "PRISM Climate Group"
   "unique_context_marker": "[57]"
   "block_ids":
   - 5
-- "title": "NADBenchmarks–a compilation of benchmark datasets for machine learning tasks related to natural disasters"
+- "title": "Nadbenchmarks–a compilation of benchmark datasets for machine learning tasks related to natural disasters"
   "unique_context_marker": "[58]"
   "block_ids":
   - 2
@@ -257,12 +257,12 @@
   "unique_context_marker": "[60]"
   "block_ids":
   - 2
-- "title": "FloodNet: A high resolution aerial imagery dataset for post flood scene understanding"
+- "title": "Floodnet: A high resolution aerial imagery dataset for post flood scene understanding"
   "unique_context_marker": "[61]"
   "block_ids":
   - 1
   - 2
-- "title": "Data-Driven Medium-Range Weather Prediction With a ResNet Pretrained on Climate Simulations: A New Model for WeatherBench"
+- "title": "Data-Driven Medium-Range Weather Prediction With a Resnet Pretrained on Climate Simulations: A New Model for WeatherBench"
   "unique_context_marker": "[62]"
   "block_ids":
   - 5
@@ -283,7 +283,7 @@
   "unique_context_marker": "[65]"
   "block_ids":
   - 1
-- "title": "EarthNet2021: A large-scale dataset and challenge for earth surface forecasting as a guided video prediction task"
+- "title": "Earthnet2021: A large-scale dataset and challenge for earth surface forecasting as a guided video prediction task"
   "unique_context_marker": "[66]"
   "block_ids":
   - 2
@@ -291,13 +291,13 @@
   "unique_context_marker": "[67]"
   "block_ids":
   - 1
-- "title": "DeepDownscale: A deep learning strategy for high-resolution weather forecast"
+- "title": "Deepdownscale: A deep learning strategy for high-resolution weather forecast"
   "unique_context_marker": "[68]"
   "block_ids":
   - 1
   - 6
   - 10
-- "title": "U-Net: Convolutional networks for biomedical image segmentation"
+- "title": "U-net: Convolutional networks for biomedical image segmentation"
   "unique_context_marker": "[69]"
   "block_ids":
   - 6
@@ -306,7 +306,7 @@
   "unique_context_marker": "[70]"
   "block_ids":
   - 1
-- "title": "Overview of the Norwegian Earth System Model (NorESM2) and key climate response of CMIP6 deck, historical, and scenario simulations"
+- "title": "Overview of the norwegian earth system model (noresm2) and key climate response of cmip6 deck, historical, and scenario simulations"
   "unique_context_marker": "[71]"
   "block_ids":
   - 5
@@ -314,7 +314,7 @@
   "unique_context_marker": "[72]"
   "block_ids":
   - 6
-- "title": "IowaRain: A statewide rain event dataset based on weather radars and quantitative precipitation estimation"
+- "title": "Iowarain: A statewide rain event dataset based on weather radars and quantitative precipitation estimation"
   "unique_context_marker": "[73]"
   "block_ids":
   - 2
@@ -322,7 +322,7 @@
   "unique_context_marker": "[74]"
   "block_ids":
   - 1
-- "title": "MetNet: A neural weather model for precipitation forecasting"
+- "title": "Metnet: A neural weather model for precipitation forecasting"
   "unique_context_marker": "[75]"
   "block_ids":
   - 1
@@ -335,20 +335,20 @@
   "unique_context_marker": "[77]"
   "block_ids":
   - 1
-- "title": "Downscaling of ERA-Interim temperature in the contiguous United States and its implications for rain–snow partitioning"
+- "title": "Downscaling of ERA-interim temperature in the contiguous United States and its implications for rain–snow partitioning"
   "unique_context_marker": "[78]"
   "block_ids":
   - 10
-- "title": "Pyrocast: a machine learning pipeline to forecast pyrocumulonimbus (PyroCb) clouds"
+- "title": "Pyrocast: a machine learning pipeline to forecast pyrocumulonimbus (pyrocb) clouds"
   "unique_context_marker": "[79]"
   "block_ids":
   - 2
-- "title": "Spatio-temporal weather forecasting and attention mechanism on convolutional LSTMs"
+- "title": "Spatio-temporal weather forecasting and attention mechanism on convolutional lstms"
   "unique_context_marker": "[80]"
   "block_ids":
   - 1
   - 6
-- "title": "DeepSD: Generating high resolution climate change projections through single image super-resolution"
+- "title": "Deepsd: Generating high resolution climate change projections through single image super-resolution"
   "unique_context_marker": "[81]"
   "block_ids":
   - 6
@@ -356,7 +356,7 @@
   "unique_context_marker": "[82]"
   "block_ids":
   - 1
-- "title": "Climate Change 2001: Synthesis report: Third assessment report of the Intergovernmental Panel on Climate Change"
+- "title": "Climate change 2001: Synthesis report: Third assessment report of the Intergovernmental Panel on Climate Change"
   "unique_context_marker": "[83]"
   "block_ids":
   - 5
@@ -381,7 +381,7 @@
   "block_ids":
   - 1
   - 6
-- "title": "PyTorch Image Models"
+- "title": "Pytorch image models"
   "unique_context_marker": "[88]"
   "block_ids": []
 - "title": "Integrating physics-based modeling with machine learning: A survey"
