--- a/data/raw/gis/climate/yaml_refs/paper_9.yaml
+++ b/data/raw/gis/climate/yaml_refs/paper_9.yaml
@@ -1,5 +1,5 @@
 "citations":
-- "title": "Definition of extreme weather events (subchapter 1.1)"
+- "title": "Deﬁnition of extreme weather events (subchapter 1.1)"
   "unique_context_marker": "[1]"
   "block_ids":
   - 1
@@ -21,11 +21,11 @@
   "block_ids":
   - 2
   - 9
-- "title": "Uncertainty quantification for data-driven weather models"
+- "title": "Uncertainty quantiﬁcation for data-driven weather models"
   "unique_context_marker": "[6]"
   "block_ids":
   - 2
-- "title": "The second met office unified model–JULES regional atmosphere and land configuration, RAL2"
+- "title": "The second met ofﬁce uniﬁed model–JULES regional atmosphere and land conﬁguration, RAL2"
   "unique_context_marker": "[7]"
   "block_ids":
   - 1
@@ -72,8 +72,7 @@
   - 12
 - "title": "The ERA5 global reanalysis"
   "unique_context_marker": "[17]"
-  "block_ids":
-  - 13
+  "block_ids": []
 - "title": "Denoising diffusion probabilistic models"
   "unique_context_marker": "[18]"
   "block_ids":
@@ -101,7 +100,7 @@
   "block_ids":
   - 2
   - 10
-  - 15
+  - 17
 - "title": "Learning skillful medium-range global weather forecasting"
   "unique_context_marker": "[23]"
   "block_ids":
@@ -114,7 +113,7 @@
   - 10
   - 12
   - 13
-  - 15
+  - 16
 - "title": "AIFS-ECMWF’s data-driven forecasting system"
   "unique_context_marker": "[24]"
   "block_ids":
@@ -172,7 +171,7 @@
 - "title": "Probabilistic forecasting with generative networks via scoring rule minimization"
   "unique_context_marker": "[36]"
   "block_ids":
-  - 15
+  - 17
 - "title": "Four-castnet: A global data-driven high-resolution weather model using adaptive fourier neural operators"
   "unique_context_marker": "[37]"
   "block_ids":
@@ -188,13 +187,13 @@
   "block_ids":
   - 1
   - 2
-  - 15
+  - 16
 - "title": "WeatherBench 2: A benchmark for the next generation of data-driven global weather models"
   "unique_context_marker": "[40]"
   "block_ids":
   - 1
   - 13
-  - 15
+  - 16
 - "title": "U-net: Convolutional networks for biomedical image segmentation"
   "unique_context_marker": "[41]"
   "block_ids":
@@ -223,15 +222,15 @@
 - "title": "Consistency models"
   "unique_context_marker": "[47]"
   "block_ids":
-  - 15
+  - 17
 - "title": "Wasserstein auto-encoders"
   "unique_context_marker": "[48]"
   "block_ids":
-  - 15
+  - 17
 - "title": "Neural discrete representation learning"
   "unique_context_marker": "[49]"
   "block_ids":
-  - 15
+  - 17
 - "title": "ClimODE: Climate forecasting with physics-informed neural ODEs"
   "unique_context_marker": "[50]"
   "block_ids":
@@ -240,41 +239,8 @@
   "unique_context_marker": "[51]"
   "block_ids":
   - 2
-- "title": "Scientific challenges of convective-scale numerical weather prediction"
+- "title": "Scientiﬁc challenges of convective-scale numerical weather prediction"
   "unique_context_marker": "[52]"
   "block_ids":
   - 1
   - 6
-- "title": "Layer normalization"
-  "unique_context_marker": "[53]"
-  "block_ids": []
-- "title": "The rise of data-driven weather forecasting: A first statistical assessment of machine learning-based weather forecasts in an operational-like context"
-  "unique_context_marker": "[54]"
-  "block_ids": []
-- "title": "Do AI models produce better weather forecasts than physics-based models? a quantitative evaluation case study of storm ciarán"
-  "unique_context_marker": "[55]"
-  "block_ids": []
-- "title": "IPCC, 2023: Climate change 2023: Synthesis report. contribution of working groups I, II and III to the sixth assessment report of the intergovernmental panel on climate change"
-  "unique_context_marker": "[56]"
-  "block_ids": []
-- "title": "Decoupled weight decay regularization"
-  "unique_context_marker": "[57]"
-  "block_ids": []
-- "title": "Hurricane laura"
-  "unique_context_marker": "[58]"
-  "block_ids": []
-- "title": "Searching for activation functions"
-  "unique_context_marker": "[59]"
-  "block_ids": []
-- "title": "Integration of renewable energy into present and future energy systems"
-  "unique_context_marker": "[60]"
-  "block_ids": []
-- "title": "Ladder variational autoencoders"
-  "unique_context_marker": "[61]"
-  "block_ids": []
-- "title": "This is the economic cost of extreme weather"
-  "unique_context_marker": "[62]"
-  "block_ids": []
-- "title": "Estimation of the continuous ranked probability score with limited information and applications to ensemble weather forecasts"
-  "unique_context_marker": "[63]"
-  "block_ids": []
