--- a/data/raw/gis/climate/yaml_refs/paper_7.yaml
+++ b/data/raw/gis/climate/yaml_refs/paper_7.yaml
@@ -12,7 +12,7 @@
 - "title": "GraphCast: Learning skillful medium-range global weather forecasting"
   "unique_context_marker": "[4]"
   "block_ids":
-  - 4
+  - 5
 - "title": "FourCastNet: Accelerating Global High-Resolution Weather Forecasting using Adaptive Fourier Neural Operators"
   "unique_context_marker": "[5]"
   "block_ids": []
@@ -20,7 +20,8 @@
   "unique_context_marker": "[6]"
   "block_ids":
   - 1
-  - 5
+  - 2
+  - 6
 - "title": "Huge Ensembles Part I: Design of Ensemble Weather Forecasts using Spherical Fourier Neural Operators"
   "unique_context_marker": "[7]"
   "block_ids": []
@@ -33,7 +34,7 @@
 - "title": "Spherical Fourier Neural Operators: Learning Stable Dynamics on the Sphere"
   "unique_context_marker": "[10]"
   "block_ids":
-  - 3
+  - 4
 - "title": "ACE: A fast, skillful learned global atmospheric model for climate prediction"
   "unique_context_marker": "[11]"
   "block_ids": []
@@ -54,7 +55,7 @@
   "unique_context_marker": "[16]"
   "block_ids":
   - 1
-  - 2
+  - 3
 - "title": "WeatherBench 2: A benchmark for the next generation of data-driven global weather models"
   "unique_context_marker": "[17]"
   "block_ids":
@@ -68,7 +69,7 @@
 - "title": "AtmoRep: A stochastic model of atmosphere dynamics using large scale representation learning"
   "unique_context_marker": "[20]"
   "block_ids":
-  - 2
+  - 3
 - "title": "Continuous Ensemble Weather Forecasting with Diffusion models"
   "unique_context_marker": "[21]"
   "block_ids": []
@@ -76,9 +77,9 @@
   "unique_context_marker": "[22]"
   "block_ids":
   - 1
-  - 2
   - 3
-  - 5
+  - 4
+  - 6
 - "title": "Denoising Diffusion Probabilistic Models"
   "unique_context_marker": "[23]"
   "block_ids":
@@ -91,7 +92,7 @@
   "unique_context_marker": "[25]"
   "block_ids":
   - 1
-  - 5
+  - 6
 - "title": "Attention Is All You Need"
   "unique_context_marker": "[26]"
   "block_ids":
@@ -104,31 +105,31 @@
   "unique_context_marker": "[28]"
   "block_ids":
   - 1
-  - 4
-- "title": "Evaluation of ecmwf forecasts"
+  - 5
+- "title": "Evaluation of ECMWF forecasts"
   "unique_context_marker": "[29]"
   "block_ids":
-  - 1
+  - 2
 - "title": "Stochastic Parametrization and Model Uncertainty"
   "unique_context_marker": "[30]"
   "block_ids":
-  - 2
+  - 3
 - "title": "Scalable and Equivariant Spherical CNNs by Discrete-Continuous (DISCO) Convolutions"
   "unique_context_marker": "[31]"
   "block_ids":
-  - 3
+  - 4
 - "title": "Neural Operators with Localized Integral and Differential Kernels"
   "unique_context_marker": "[32]"
   "block_ids":
-  - 3
+  - 4
 - "title": "A ConvNet for the 2020s"
   "unique_context_marker": "[33]"
   "block_ids":
-  - 3
+  - 4
 - "title": "Gaussian Error Linear Units (GELUs)"
   "unique_context_marker": "[34]"
   "block_ids":
-  - 3
+  - 4
 - "title": "Automatic Cross-Replica Sharding of Weight Update in Data-Parallel Training"
   "unique_context_marker": "[35]"
   "block_ids": []
@@ -141,19 +142,19 @@
 - "title": "GPT-4 Technical Report"
   "unique_context_marker": "[38]"
   "block_ids":
-  - 4
+  - 5
 - "title": "The Llama 3 Herd of Models"
   "unique_context_marker": "[39]"
   "block_ids":
-  - 4
+  - 5
 - "title": "The ERA5 global reanalysis"
   "unique_context_marker": "[40]"
   "block_ids":
-  - 4
-- "title": "Data-driven ensemble forecasting with the aifs"
+  - 5
+- "title": "Data-driven ensemble forecasting with the AIFS"
   "unique_context_marker": "[41]"
   "block_ids":
-  - 5
+  - 6
 - "title": "Consistency Models"
   "unique_context_marker": "[42]"
   "block_ids": []
